// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectBox /> should not render menu when select box is opened and has no options 1`] = `
<div
  className="talixo-combo-box"
>
  <button
    aria-expanded={true}
    aria-haspopup={true}
    aria-label="close menu"
    className="talixo-combo-box__value talixo-combo-box__value--placeholder"
    data-toggle={true}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    type="button"
  >
    <div
      className="talixo-combo-box__inner"
    >
      ...
    </div>
    <div
      className="talixo-combo-box__controls"
    >
      <div
        className="talixo-combo-box__arrow"
      >
        <span
          aria-hidden="true"
          className="talixo-icon tai tai--material"
        >
          
        </span>
      </div>
    </div>
  </button>
</div>
`;

exports[`<SelectBox /> should render correctly 1`] = `
<div
  className="talixo-combo-box"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-label="open menu"
    className="talixo-combo-box__value talixo-combo-box__value--placeholder"
    data-toggle={true}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    type="button"
  >
    <div
      className="talixo-combo-box__inner"
    >
      ...
    </div>
    <div
      className="talixo-combo-box__controls"
    >
      <div
        className="talixo-combo-box__arrow"
      >
        <span
          aria-hidden="true"
          className="talixo-icon tai tai--material"
        >
          
        </span>
      </div>
    </div>
  </button>
</div>
`;

exports[`<SelectBox /> should render menu when select box is opened and has options 1`] = `
<div
  className="talixo-combo-box talixo-combo-box--open"
>
  <button
    aria-expanded={true}
    aria-haspopup={true}
    aria-label="close menu"
    className="talixo-combo-box__value talixo-combo-box__value--placeholder"
    data-toggle={true}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    type="button"
  >
    <div
      className="talixo-combo-box__inner"
    >
      ...
    </div>
    <div
      className="talixo-combo-box__controls"
    >
      <div
        className="talixo-combo-box__arrow"
      >
        <span
          aria-hidden="true"
          className="talixo-icon tai tai--material"
        >
          
        </span>
      </div>
    </div>
  </button>
  <div
    className="talixo-combo-box__menu"
  >
    <div
      className="talixo-combo-box__list"
    >
      <div
        className="talixo-combo-box__item"
        id="downshift-0-item-0"
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseMove={[Function]}
      >
        <div
          className="talixo-combo-box__item__tick"
        >
          <span
            aria-hidden="true"
            className="talixo-icon tai tai--material"
          >
            
          </span>
        </div>
        <div
          className="talixo-combo-box__item__inner"
        >
          abc
        </div>
      </div>
      <div
        className="talixo-combo-box__item"
        id="downshift-0-item-1"
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseMove={[Function]}
      >
        <div
          className="talixo-combo-box__item__tick"
        >
          <span
            aria-hidden="true"
            className="talixo-icon tai tai--material"
          >
            
          </span>
        </div>
        <div
          className="talixo-combo-box__item__inner"
        >
          def
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox /> should show multi-select box with many values 1`] = `
<div
  className="talixo-combo-box talixo-combo-box--multi"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-label="open menu"
    className="talixo-combo-box__value"
    data-toggle={true}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    type="button"
  >
    <div
      className="talixo-combo-box__inner"
    >
      <div
        className="talixo-combo-box__tags"
      >
        <span
          className="talixo-combo-box__tag"
        >
          <span
            className="talixo-combo-box__tag__inner"
          >
            abc
          </span>
          <span
            aria-label="remove value"
            className="talixo-combo-box__remove"
            onClick={[Function]}
            role="button"
          >
            <span
              aria-hidden="true"
              className="talixo-icon tai tai--material"
            >
              
            </span>
          </span>
        </span>
        <span
          className="talixo-combo-box__tag"
        >
          <span
            className="talixo-combo-box__tag__inner"
          >
            def
          </span>
          <span
            aria-label="remove value"
            className="talixo-combo-box__remove"
            onClick={[Function]}
            role="button"
          >
            <span
              aria-hidden="true"
              className="talixo-icon tai tai--material"
            >
              
            </span>
          </span>
        </span>
      </div>
    </div>
    <div
      className="talixo-combo-box__controls"
    >
      <div
        className="talixo-combo-box__arrow"
      >
        <span
          aria-hidden="true"
          className="talixo-icon tai tai--material"
        >
          
        </span>
      </div>
    </div>
  </button>
</div>
`;

exports[`<SelectBox /> should show select box with selected value 1`] = `
<div
  className="talixo-combo-box"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-label="open menu"
    className="talixo-combo-box__value"
    data-toggle={true}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    type="button"
  >
    <div
      className="talixo-combo-box__inner"
    >
      abc
    </div>
    <div
      className="talixo-combo-box__controls"
    >
      <div
        className="talixo-combo-box__arrow"
      >
        <span
          aria-hidden="true"
          className="talixo-icon tai tai--material"
        >
          
        </span>
      </div>
    </div>
  </button>
</div>
`;
